adicionando Menu, item de abrir arquivo GLTF adicionado

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
     <div class="container">
-            <ul class="menu">
-                <input id="file" type="file" />
-            </ul>
+            
    
         <div class="grid-container">
+            <div id="menu">
+                <ul >
+                    <input id="file" type="file" />
+                </ul>
+            </div>
             <canvas id="canvas">
                 Canvas
             </canvas>
